Solucion de la letra a en la encriptacion

--- a/index.html
+++ b/index.html
@@ -132,15 +132,16 @@
   <footer>
     <div class="conteiner-foot">
 
-      <div class="cl1">
+      <div>
         <p class="copyright">&#169; Copyright Alura-2023. Desarrollado por Manuel Enrique Antón Cisneros.</p>
       </div>
 
-      <div class="cl1">
+      <div >
         <a href="https://github.com/MEAC2003" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
         </a>
       </div>
+      
     </div>
   </footer>
   <!--Js -->
